<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

  <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>

  <item android:id="@+id/action_sort_by"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">
    <menu>
      <group android:checkableBehavior="single">
        <item android:id="@+id/sort_by_name"
              android:title="@string/name" />
        <item android:id="@+id/sort_by_date_added"
              android:title="@string/date_added"
              android:checked="true"/>
      </group>
    </menu>
  </item>

</menu>