<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.itemActivity.BorrowedItemActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/borrowed_item_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/input_layout_margin"
        android:layout_marginEnd="@dimen/input_layout_margin"
        android:layout_marginTop="@dimen/input_layout_margin"
        android:hint="@string/borrowed_item">

      <EditText
          android:id="@+id/borrowed_item_name_edittext"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/borrower_name_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/borrowed_item_input_layout"
        android:layout_marginStart="@dimen/input_layout_margin"
        android:layout_marginEnd="@dimen/input_layout_margin"
        android:layout_marginTop="@dimen/input_layout_margin"
        android:hint="@string/borrower_name">

      <EditText
          android:id="@+id/borrower_name_edittext"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textAppearance="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/borrower_name_input_layout"
        android:layout_margin="@dimen/button_margin"
        android:textSize="14sp"
        android:text="@string/set_borrowed_date"/>

    <TextView
        android:id="@+id/borrow_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/textview_margin"
        android:textSize="18sp"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/fab_margin"
      android:layout_gravity="bottom|end"
      android:src="@drawable/ic_done"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>